--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vue/compat": "^3.2.44",
     "axios": "^1.1.3",
     "bootstrap-vue": "^2.23.1",
+    "moment": "^2.29.4",
     "vue": "^3.2.44",
     "x2js": "^3.4.4"
   },
